--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 
 								<p class="about-content"> 
 
-									&nbsp;Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região.
+									Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região.
 									<br/><br/>
-									&nbsp;Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas para alavancar essa empresa emergente. Sendo assim, a nossa <span class="content-markup">vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo mercado, tudo isso sendo realizado com o suporte de pessoas capacitadas para tal. <br/><br/>
+									Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas para alavancar essa empresa emergente. Sendo assim, a nossa <span class="content-markup">vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo mercado, tudo isso sendo realizado com o suporte de pessoas capacitadas para tal. <br/><br/>
 
-									&nbsp;Nosso principal <span class="content-markup">objetivo</span> é prestar um <span class="content-markup">serviço com excelência</span>, e é por isso que queremos ser lembrados. <br/><br/>
+									Nosso principal <span class="content-markup">objetivo</span> é prestar um <span class="content-markup">serviço com excelência</span>, e é por isso que queremos ser lembrados. <br/><br/>
 
-									&nbsp;Nosso <span class="content-markup">foco</span> está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo <span class="content-markup">transparente</span> ao ponto de prestar o serviço com o máximo de excelência sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante. <br/><br/>
+									Nosso <span class="content-markup">foco</span> está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo <span class="content-markup">transparente</span> ao ponto de prestar o serviço com o máximo de excelência sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante. <br/><br/>
 
-									&nbsp;Entregamos mais <span class="content-markup">qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos políticas diferenciadas para retenção de talentos. </p>
+									Entregamos mais <span class="content-markup">qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos políticas diferenciadas para retenção de talentos. </p>
 
 							</div>
 
