Refinamentos - Section - Serviços.
Refinamentos gerais com Flexbox na Section de Serviços.
Ainda em beta (para aprovação), implementado o botão de Contato no Slide 5 - utilizando a nova técnica (de tendência de design para os próximos anos) de Neomorfismo.

--- a/index.html
+++ b/index.html
@@ -180,9 +180,11 @@
 
 											<p class="slider_content">
 												
-												Entre em contato conosco para que possamos analisar suas reais necessidades e juntos possamos desenhar uma solução que lhe apresente o melhor custo x benefício.  
+												Clique no botão abaixo e entre em contato conosco para que possamos analisar suas reais necessidades e juntos possamos desenhar uma solução que lhe apresente o melhor custo x benefício.  
 												
 											</p>
+
+												<a href="#" class="contact_link"> <span id="contact_slide_button">Contato</span> </a>
 
 										</div>
 
