Refinamentos gerais no Layout.
Realizados alguns refinamentos gerais no Layout da página.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 						<p class="header_content"> 
 
-							Nossa principal missão é lhe apresentar um novo conceito na área de segurança privada, fornecendo um serviço de qualidade, com profissionais capacitados e qualificados para proteger o seu patrimônio, e lhe proporcionar o conforto de contar com a gente para fazer isso do jeito certo. Aqui nesse cantinho virtual que desenvolvemos com carinho, contamos nossa trajetória, nossos objetivos para o futuro, e como trabalhamos. Acesse o menu superior direito e se conecte com a gente!
+							&nbsp;&nbsp;Nossa principal missão é lhe apresentar um novo conceito na área de segurança privada, fornecendo um serviço de qualidade, com profissionais capacitados e qualificados para proteger o seu patrimônio, e lhe proporcionar o conforto de contar com a gente para fazer isso do jeito certo. Aqui nesse cantinho virtual que desenvolvemos com carinho, contamos nossa trajetória, nossos objetivos para o futuro, e como trabalhamos. Acesse o menu superior direito e se conecte com a gente!
 
 						</p>
 
