Refinamentos na Section - Teams.
Realizados refinamentos nos alinhamentos da Section - Teams.
Implementados os novos Botões de contato com os refinamentos (mesmo funcionamento0 do Botão de Contato do quinto Slide da Section - Services.

--- a/index.html
+++ b/index.html
@@ -244,15 +244,19 @@
 
 								</p>
 
-									<a href="#" class="vitae_link"> <span id="vitae_link_button">Download</span> </a>
-
 								<p class="team-content-2">
 									
 									Após preencher o currículo digital que você fez o download, clique no botão abaixo para nos enviar o currículo.
 
 								</p>
 
-									<a href="#" class="contact_send"> <span id="contact_send_button">Contato</span> </a>
+									<div class="team_buttons">
+										
+										<a href="#" class="vitae_link"> <span id="vitae_link_button">Baixar</span> </a>
+
+										<a href="#" class="contact_send"> <span id="contact_send_button">Enviar</span> </a>
+
+									</div>	
 
 							</div>
 
