--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 			<link rel="stylesheet" type="text/css" href="./css/styles.css"/>
 
-
+			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
 
 		</head>
 
@@ -297,6 +297,8 @@
 											<div class="menu_button_burguer"> </div>
 
 										</div>
+
+										<button id="topButton"> <i class="fas fa-arrow-alt-circle-up fa-4x"></i> </button>
 
 			<script src="./javascript/scripts.js" type="text/javascript"> </script>
 
