Adição de FlexBox no menu de navegação.
Removidas as Margens Fixas e adicionado FlexBox no Menu de Navegação, obtendo alinhamentos/espaçamentos automáticos dos Links.

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 
                     <ul class="nav_list">
 
-                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-home fa-3x"> </i> <br/> Início </a> </li>
+                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-home fa-4x"> </i> <br/> Início </a> </li>
 
-                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-fingerprint fa-3x"> </i> <br/> Sobre Nós </a> </li>
+                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-fingerprint fa-4x"> </i> <br/> Nossa História </a> </li>
 
-                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-handshake fa-3x"> </i> <br/> Nossos Serviços </a> </li>
+                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-handshake fa-4x"> </i> <br/> Nossos Serviços </a> </li>
 
-                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-users fa-3x"> </i> <br/> Entre no Time </a> </li>
+                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-users fa-4x"> </i> <br/> Entre Pro Time </a> </li>
 
-                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-address-card fa-3x"> </i> <br/> Contato </a> </li>
+                        <li class="nav_item"> <a href="#" class="nav_link"> <i class="fas fa-address-card fa-4x"> </i> <br/> Contato </a> </li>
 
                     </ul>
 
