Refinamentos finais na Section - About.
Refinamentos gerais finalizando a Section - About.

--- a/index.html
+++ b/index.html
@@ -96,28 +96,27 @@
 
                         <div class="about_contents">
 
-                            <h2 class="about_subtitle"> Como tudo começou </h2>
-
                             <p class="about_text">
 
                                 Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade 
                                 de negócio a ser empreendido na região. <br/><br/>
 
-                                Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do 
-                                mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas para 
-                                alavancar essa empresa emergente. Sendo assim, a nossa vantagem competitiva é a gestão do negócio, 
-                                dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo 
+                                Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo 
+                                que as empresas já existentes, foi necessario criar vantagens competitivas para alavancar essa empresa 
+                                emergente. Sendo assim, a nossa <span class="content_markup">vantagem competitiva</span> é a gestão do 
+                                negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo 
                                 mercado, tudo isso sendo realizado com o suporte de pessoas capacitadas para tal. <br/><br/>
 
-                                Nosso principal objetivo é prestar um serviço com excelência, e é por isso que queremos ser lembrados. <br/><br/>
+                                Nosso principal <span class="content_markup">objetivo</span> é prestar um <span class="content_markup">serviço 
+                                com excelência</span>, e é por isso que queremos ser lembrados. <br/><br/>
 
-                                Nosso foco está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo 
-                                transparente ao ponto de prestar o serviço com o máximo de excelência sem prejudicar o bom funcionamento das tarefas 
-                                cotidianas da empresa contratante. <br/><br/>
+                                Nosso <span class="content_markup">foco</span> está voltado para solucionar os problemas de segurança apresentados 
+                                pelas empresas contratantes, sendo <span class="content_markup">transparente</span> ao ponto de prestar o serviço 
+                                com o máximo de excelência sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante. <br/><br/>
 
                                 
-                                Entregamos mais qualidade pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos políticas 
-                                diferenciadas para retenção de talentos. <br/><br/>
+                                Entregamos mais <span class="content_markup">qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, 
+                                bem como praticamos políticas diferenciadas para retenção de talentos. <br/><br/>
 
                             </p>
 
