--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 </div>
 
-                <div class="nav_toggle" id="nav-toggle"> <i class="fas fa-ellipsis-v"> </i> </div>
+                <div class="nav_toggle" id="nav-toggle"> <i class="fas fa-bars"> </i> </div>
 
             </nav>
 
