Implementação da Section - Teams.
Implementada a Estrutura HTML da Section - Teams;
Implementado FlexBox na Section - Teams, na Imagem e Textos.

--- a/index.html
+++ b/index.html
@@ -268,6 +268,46 @@
 
             </section>
 
+            <section class="teams section" id="teams">
+
+                <h2 class="section_title"> Entre Pro Time </h2>
+
+                    <div class="container">
+
+                        <div class="team_left_col">
+
+                            <div class="team_image"> </div>
+
+                        </div>
+
+                        <div class="team_right_col">
+
+                            <h3 class="team_subtitle"> Nossos Colaboradores </h3>
+
+                            <p class="team_content">
+
+                                Contamos com profissionais altamente capacitados que passam periodicamente por 
+                                cursos de reciclagem para atender as normas existentes nesta área e a mantê-los 
+                                constantemente atualizados.
+
+                            </p>
+
+                            <h3 class="team_subtitle"> Faça Parte Deste Time </h3>
+
+                            <p class="team_content">
+
+                                Caso ainda não tenha um currículo digital, clique no botão abaixo para fazer o download de um modelo que pode ser utilizado.
+                                <br/><br/>
+                                Após preencher o currículo digital que você fez o download, clique no botão abaixo para nos enviar o currículo.
+
+                            </p>
+
+                        </div>
+
+                    </div>
+
+            </section>
+
         </main>
 
         <script type="text/javascript" src="https://unpkg.com/scrollreveal"> </script>
