Finalização da Section - Teams.
Finalizados os alinhamentos com FlexBox na Section - Teams;
Implementados os dois Botões de Contato.

--- a/index.html
+++ b/index.html
@@ -297,10 +297,18 @@
                             <p class="team_content">
 
                                 Caso ainda não tenha um currículo digital, clique no botão abaixo para fazer o download de um modelo que pode ser utilizado.
-                                <br/><br/>
-                                Após preencher o currículo digital que você fez o download, clique no botão abaixo para nos enviar o currículo.
 
                             </p>
+                                
+                                <a href="#" class="contact_link"> <span id="contact_teams">Contato</span> </a> <br/>
+
+                            <p class="team_content">
+
+                                Após preencher o currículo digital que você fez o download, clique no botão abaixo para nos enviar o currículo. <br/>
+
+                            </p>
+
+                                <a href="#" class="contact_link"> <span id="contact_teams">Contato</span> </a>
 
                         </div>
 
