--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 </div>
 
-                <div class="nav_toggle" id="nav-toggle"> <i class="fas fa-bars"> </i> </div>
+                <div class="nav_toggle" id="nav-toggle"> <i class="fas fa-bars fa-2x"> </i> </div>
 
             </nav>
 
@@ -300,7 +300,7 @@
 
                             </p>
                                 
-                                <a href="#" class="contact_link"> <span id="contact_teams">Contato</span> </a> <br/>
+                                <a href="#" class="contact_link"> <span id="contact_teams">Baixar</span> </a> <br/>
 
                             <p class="team_content">
 
@@ -308,7 +308,7 @@
 
                             </p>
 
-                                <a href="#" class="contact_link"> <span id="contact_teams">Contato</span> </a>
+                                <a href="#" class="contact_link"> <span id="contact_teams">Enviar</span> </a>
 
                         </div>
 
