--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 
                     <ul class="nav_list">
 
-                        <li class="nav_item"> <a href="#home" class="nav_link"> <i class="fas fa-home fa-4x"> </i> <br/> Início </a> </li>
+                        <li class="nav_item"> <a href="#home" class="nav_link active"> <i class="fas fa-home fa-4x"> </i> <br/> <span class="link_name">Início</span> </a> </li>
 
-                        <li class="nav_item"> <a href="#about" class="nav_link"> <i class="fas fa-fingerprint fa-4x"> </i> <br/> Nossa História </a> </li>
+                        <li class="nav_item"> <a href="#about" class="nav_link"> <i class="fas fa-fingerprint fa-4x"> </i> <br/> <span class="link_name">Nossa História</span> </a> </li>
 
-                        <li class="nav_item"> <a href="#services" class="nav_link"> <i class="fas fa-handshake fa-4x"> </i> <br/> Nossos Serviços </a> </li>
+                        <li class="nav_item"> <a href="#services" class="nav_link"> <i class="fas fa-handshake fa-4x"> </i> <br/> <span class="link_name">Nossos Serviços</span> </a> </li>
 
-                        <li class="nav_item"> <a href="#teams" class="nav_link"> <i class="fas fa-users fa-4x"> </i> <br/> Entre Pro Time </a> </li>
+                        <li class="nav_item"> <a href="#teams" class="nav_link"> <i class="fas fa-users fa-4x"> </i> <br/> <span class="link_name">Entre Pro Time</span> </a> </li>
 
-                        <li class="nav_item"> <a href="#contact" class="nav_link"> <i class="fas fa-address-card fa-4x"> </i> <br/> Contato </a> </li>
+                        <li class="nav_item"> <a href="#contact" class="nav_link"> <i class="fas fa-address-card fa-4x"> </i> <br/> <span class="link_name">Contato</span> </a> </li>
 
                     </ul>
 
