--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <main class="main_dashboard">
 
-            <section class="home bd-grid" id="home">
+            <section class="home section bd-grid" id="home">
 
                 <div class="home_data">
 
