Implementação da Section de Início.
Implementada a Sessão de Início, estilização inicial global para o HTML e estilização inicial da Section de Início.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 
         <body>
             
+        <!-- Início da Sessão Inicial -->
+
+            <section id="hero">
+                <div class="hero_container container">
+                    <div class="hero_content">
+                        <h1 class="hero_title"> Olá, bem-vindo ao site da JPGOBBI! </h1>
+                            <a href="#" type="button" class="cta_button"> Contato </a>
+                    </div>
+                </div>
+            </section>
+
+        <!-- Fim da Sessão Inicial -->
+
             <script type="text/javascript" src="scripts.js"> </script>
             
         </body>
