Finalização (ainda inicial) da Sessão Inicial.
Finalizada inicialmente a implementação  da Sessão de início da página.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             <section id="hero">
                 <div class="hero_container container">
                     <div class="hero_content">
-                        <h1 class="hero_title"> Olá, bem-vindo ao site da JPGOBBI! </h1>
-                            <a href="#" type="button" class="cta_button"> Contato </a>
+                        <h1 class="hero_title"> Olá <span class="title_box"></span> </h1>
+                        <h1 class="hero_title"> bem-vindo <span class="title_box"></span> </h1>
+                        <h1 class="hero_title"> ao site da <span class="title_box"></span> </h1>
+                        <h1 class="hero_title"> <span class="title_span">JPGOBBI</span> <span class="title_box"></span> </h1>
+                            <a href="#" type="button" class="cta_button"> Contato <span class="title_box"></span> </a>
                     </div>
                 </div>
             </section>
