Refinamentos gerais na Section - Home.
Realizados alguns refinamentos gerais no código-fonte da Section - Home.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
             
         <!-- Início da Sessão Inicial -->
 
-            <section id="hero">
-                <div class="hero_container container">
-                    <div class="hero_content">
-                        <h1 class="hero_title"> Olá <span class="title_box"></span> </h1>
-                        <h1 class="hero_title"> bem-vindo <span class="title_box"></span> </h1>
-                        <h1 class="hero_title"> ao site da <span class="title_box"></span> </h1>
-                        <h1 class="hero_title"> <span class="title_span">JPGOBBI</span> <span class="title_box"></span> </h1>
+            <section id="home">
+                <div class="home_container container">
+                    <div class="home_content">
+                        <h1 class="home_title"> Olá <span class="title_box"></span> </h1>
+                        <h1 class="home_title"> bem-vindo <span class="title_box"></span> </h1>
+                        <h1 class="home_title"> ao site da <span class="title_box"></span> </h1>
+                        <h1 class="home_title"> <span class="title_span">JPGOBBI</span> <span class="title_box"></span> </h1>
                             <a href="#" type="button" class="cta_button"> Contato <span class="title_box"></span> </a>
                     </div>
                 </div>
             </section>
 
+        <!-- Fim da Sessão Inicial -->
+
+        <!-- Início da Sessão Inicial -->
         <!-- Fim da Sessão Inicial -->
 
             <script type="text/javascript" src="scripts.js"> </script>
