Implementada a Section - History.
Implementada a Section - History inicialmente.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <body>
             
-        <!-- Início da Sessão Inicial -->
+        <!-- Início da Sessão Home -->
 
             <section id="home">
                 <div class="home_container container">
@@ -27,10 +27,49 @@
                 </div>
             </section>
 
-        <!-- Fim da Sessão Inicial -->
+        <!-- Fim da Sessão Home -->
 
-        <!-- Início da Sessão Inicial -->
-        <!-- Fim da Sessão Inicial -->
+        <!-- Início da Sessão History -->
+
+            <section id="history">
+                <div class="history_container container">
+                    <div class="history_content">
+                        <div class="history_top">
+                            <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
+                            <p class="section_text">
+                                Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade 
+                                de negócio a ser empreendido na região.
+                                <br/><br/>
+                                Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam serviços 
+                                do mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas 
+                                para alavancar essa empresa emergente. Sendo assim, a nossa <span class="text_span">vantagem 
+                                competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, 
+                                aplicando diversas práticas bem aceitas pelo mercado, tudo isso sendo realizado com o suporte de 
+                                pessoas capacitadas para tal.
+                                <br/><br/>
+                                Nosso principal <span class="text_span">objetivo</span> é prestar um <span class="text_span">serviço 
+                                com excelência</span>, e é por isso que queremos ser lembrados.
+                                <br/><br/>
+                                Nosso <span class="text_span">foco</span> está voltado para solucionar os problemas de segurança apresentados
+                                pelas empresas contratantes, sendo <span class="text_span">transparente</span> ao ponto de prestar o serviço 
+                                com o máximo de excelência sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante.
+                                <br/><br/>
+                                Entregamos mais <span class="text_span">qualidade</span> pois investimos em treinamento e capacitação dos 
+                                colaboradores, bem como praticamos políticas diferenciadas para retenção de talentos.
+                            </p>
+                        </div>
+                        <div class="history_bottom">
+                            <img src="./images/jpgobbi_logo_withoutbg_cropped.png" width="350"/>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
+        <!-- Fim da Sessão History -->
+
+        <!-- Início da Sessão Services -->
+        <!-- Fim da Sessão Services -->
 
             <script type="text/javascript" src="scripts.js"> </script>
             
