--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </p>
                         </div>
                         <div class="history_bottom">
-                            <img src="./images/jpgobbi_logo_withoutbg_cropped.png" width="350"/>
+                            <img src="./images/jpgobbi_logo_withoutbg_cropped.png" width="350" height="350"/>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,144 @@
         <!-- Fim da Sessão History -->
 
         <!-- Início da Sessão Services -->
+
+            <section id="services">
+                <div class="services_container container">
+                    <div class="services_top">
+                        <h1 class="section_title"> Nossos <span class="section_title_span">Serviços</span> </h1>
+                        <p class="section_text">
+                            A prestação de serviços na área de segurança privada, além de tratar da segurança física 
+                            de bens, patrimônios e pessoas, está inevitavelmente relacionada com a portaria/recepção 
+                            das empresas.
+                            <br/><br/>
+                            A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está 
+                            visitando e, como a primeira impressão é a que fica, quando alguém é mal atendido por uma 
+                            pessoa a imagem da empresa como um todo fica desgastada, por isso é importante ter pessoas 
+                            especializadas para que a empresa seja bem vista desde o seu portão de entrada.
+                        </p>
+                    </div>
+                    <div class="services_bottom">
+                        <div class="service_item">
+                            <div class="icon">
+                                <img src="./vectors/handshake.svg" width="100"/>
+                            </div>
+                            <h2 class="service_item_title"> Deixe pra gente! </h2>
+                            <p class="service_item_text">
+                                Possuímos profissionais especializados para fornecer esse tipo de atendimento. Assim
+                                o contratante não precisa se preocupar com este tipo de serviço secundário e pode se 
+                                focar na atividade fim (core-business) de sua empresa, que é o que gera lucro para a mesma. 
+                            </p>
+                        </div>
+                        <div class="service_item" id="second">
+                            <div class="icon">
+                                <img src="./vectors/armed_guard.svg" width="100"/>
+                            </div>
+                            <h2 class="service_item_title"> Vigilância Armada </h2>
+                            <p class="service_item_text">
+                                Disponibilização de vigilantes armados, formados e com as especializações necessárias para o
+                                cumprimento das atribuições elencadas para cada um.
+                                Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma 
+                                cobertura de 24 horas 7 dias por semana.
+                            </p>
+                        </div>
+                        <div class="service_item">
+                            <div class="icon">
+                                <img src="./vectors/unarmed_guard.svg" width="100"/>
+                            </div>
+                            <h2 class="service_item_title"> Portaria Desarmada </h2>
+                            <p class="service_item_text">
+                                Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos 
+                                críticos, que não necessitem de vigilantes armados.
+                                Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura 
+                                de 24 horas 7 dias por semana.
+                            </p>
+                        </div>
+                        <div class="service_item">
+                            <div class="icon">
+                                <img src="./vectors/recepcionist.svg" width="100"/>
+                            </div>
+                            <h2 class="service_item_title"> Recepcionista </h2>
+                            <p class="service_item_text">
+                                Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recepção
+                                de pessoas e atendimento telefônico durante o horário de funcioanamento da empresa.
+                                Esta modalidade geralmente é utilizada durante o horário comercial.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         <!-- Fim da Sessão Services -->
+
+        <!-- Início da Sessão Projects -->
+
+            <section id="projects">
+                <div class="projects_container container">
+                    <div class="projects_header">
+                        <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
+                    </div>
+                    <div class="all_projects">
+                        <div class="project_item">
+                            <div class="project_info">
+                                <h1 class="project_title"> Project 1 </h1>
+                                    <h2 class="project_subtitle"> Coding is Love </h2>
+                                        <p class="project_text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                                            laboris nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                            </div>
+                            <div class="project_image">
+                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                            </div>
+                        </div>
+                        <div class="project_item">
+                            <div class="project_info">
+                                <h1 class="project_title"> Project 2 </h1>
+                                    <h2 class="project_subtitle"> Coding is Love </h2>
+                                        <p class="project_text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                                            laboris nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                            </div>
+                            <div class="project_image">
+                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                            </div>
+                        </div>
+                        <div class="project_item">
+                            <div class="project_info">
+                                <h1 class="project_title"> Project 3 </h1>
+                                    <h2 class="project_subtitle"> Coding is Love </h2>
+                                        <p class="project_text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                                            laboris nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                            </div>
+                            <div class="project_image">
+                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                            </div>
+                        </div>
+                        <div class="project_item">
+                            <div class="project_info">
+                                <h1 class="project_title"> Project 4 </h1>
+                                    <h2 class="project_subtitle"> Coding is Love </h2>
+                                        <p class="project_text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                                            laboris nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                            </div>
+                            <div class="project_image">
+                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        <!-- Fim da Sessão Projects -->
 
             <script type="text/javascript" src="scripts.js"> </script>
             
