Implementação da Section de Projetos.
Implementada a Section Projects e estilização inicial.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                         </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                                <img src="./images/security_guard_scanning.jpg"/>
                             </div>
                         </div>
                         <div class="project_item">
@@ -171,7 +171,7 @@
                                         </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                                <img src="./images/security_guard_scanning.jpg"/>
                             </div>
                         </div>
                         <div class="project_item">
@@ -185,7 +185,7 @@
                                         </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                                <img src="./images/security_guard_scanning.jpg"/>
                             </div>
                         </div>
                         <div class="project_item">
@@ -199,7 +199,7 @@
                                         </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg" width="100"/>
+                                <img src="./images/security_guard_scanning.jpg"/>
                             </div>
                         </div>
                     </div>
