Refinamentos gerais na Section Home.
Realizados refinamentos gerais e melhorias na Section Home.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                         <h1 class="home_title"> bem-vindo <span class="title_box"></span> </h1>
                         <h1 class="home_title"> ao site da <span class="title_box"></span> </h1>
                         <h1 class="home_title"> <span class="title_span">JPGOBBI</span> <span class="title_box"></span> </h1>
-                            <a href="#" type="button" class="cta_button"> Contato <span class="title_box"></span> </a>
+                            <span class="cta_button">
+                                <div class="text" data-text="Contato"><a href="#">Contato</a></div>
+                            </span>
                     </div>
                 </div>
             </section>
